<resources>
    <string name="app_name">USI</string>
    <string name="text_fecha_hoy">Fecha de hoy</string>
    <string name="text_fecha_hoy_date">25/09/2020</string>
    <string name="text_desea_buscar">Seleccione que desea buscar</string>
    <string name="txt_USI_salas_description">Salas de Computo</string>
    <string name="txt_USI_salas">Salas</string>
    <string name="txt_USI_monitorias">Monitorias</string>
    <string name="txt_USI_monitorias_description">Monitorias de Salas</string>
</resources>
